--- a/vs2012/basis.vcxproj.filters
+++ b/vs2012/basis.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="..\include\basis_observer_ext.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="basis_atomic.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\basis_subject.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\basis_atomic.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
