--- a/vs2012/basis.vcxproj.filters
+++ b/vs2012/basis.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\include\basis_atomic.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\basis_smart_ptr.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
