--- a/vs2012/basis.vcxproj
+++ b/vs2012/basis.vcxproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <ClInclude Include="..\include\basis_atomic.h" />
     <ClInclude Include="..\include\basis_define.h" />
+    <ClInclude Include="..\include\basis_md5.h" />
     <ClInclude Include="..\include\basis_notification.h" />
     <ClInclude Include="..\include\basis_observer.h" />
     <ClInclude Include="..\include\basis_subject.h" />
@@ -72,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\basis_atomic.cpp" />
+    <ClCompile Include="..\src\basis_md5.cpp" />
     <ClCompile Include="..\src\basis_subject.cpp" />
     <ClCompile Include="..\src\main.cpp" />
   </ItemGroup>
