--- a/vs2012/basis.vcxproj.filters
+++ b/vs2012/basis.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\include\basis_atomic.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\basis_md5.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -36,6 +39,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\basis_atomic.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\basis_md5.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
