transplant scoped_ptr&weak_ptr&smart_ptr from boost and xcore

--- a/vs2012/basis.vcxproj.filters
+++ b/vs2012/basis.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="..\include\basis_smart_ptr.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\basis_checked_delete.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
