--- a/vs2012/basis.vcxproj
+++ b/vs2012/basis.vcxproj
@@ -64,6 +64,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\include\basis_atomic.h" />
+    <ClInclude Include="..\include\basis_checked_delete.h" />
     <ClInclude Include="..\include\basis_define.h" />
     <ClInclude Include="..\include\basis_notification.h" />
     <ClInclude Include="..\include\basis_observer.h" />
