--- a/vs2012/basis.vcxproj.filters
+++ b/vs2012/basis.vcxproj.filters
@@ -1,98 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="include">
-      <UniqueIdentifier>{b8b64b33-0def-49bc-80b3-79790cab2d45}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src">
-      <UniqueIdentifier>{4eae4c6e-805f-46ca-8bd5-ce5df8b05509}</UniqueIdentifier>
-    </Filter>
+    <ClCompile Include="..\src\basis_event.cpp" />
+    <ClCompile Include="..\src\basis_json.cpp" />
+    <ClCompile Include="..\src\basis_atomic.cpp" />
+    <ClCompile Include="..\src\basis_critical.cpp" />
+    <ClCompile Include="..\src\basis_md5.cpp" />
+    <ClCompile Include="..\src\basis_mutex.cpp" />
+    <ClCompile Include="..\src\basis_rw_lock.cpp" />
+    <ClCompile Include="..\src\basis_subject.cpp" />
+    <ClCompile Include="..\src\basis_var.cpp" />
+    <ClCompile Include="..\src\test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\basis_observer.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_subject.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_notification.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_define.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_observer_ext.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_json.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_atomic.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_md5.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_smart_ptr.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_checked_delete.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_critical.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_macro.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_mutex.h">
-      <Filter>include</Filter>
-    </ClInclude>
-<<<<<<< HEAD
-    <ClInclude Include="..\include\basis_rw_lock.h">
-=======
-    <ClInclude Include="..\include\basis_var.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_var_holder.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\basis_event.h">
->>>>>>> b1f6ac24c9c5624a3cce8417c952e84c4e116c17
-      <Filter>include</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\src\basis_subject.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\basis_json.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\basis_atomic.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\basis_md5.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\basis_critical.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\basis_mutex.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-<<<<<<< HEAD
-    <ClCompile Include="..\src\basis_rw_lock.cpp">
-=======
-    <ClCompile Include="..\src\test.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\basis_var.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\basis_event.cpp">
->>>>>>> b1f6ac24c9c5624a3cce8417c952e84c4e116c17
-      <Filter>src</Filter>
-    </ClCompile>
+    <ClInclude Include="..\include\basis_atomic.h" />
+    <ClInclude Include="..\include\basis_checked_delete.h" />
+    <ClInclude Include="..\include\basis_critical.h" />
+    <ClInclude Include="..\include\basis_define.h" />
+    <ClInclude Include="..\include\basis_event.h" />
+    <ClInclude Include="..\include\basis_json.h" />
+    <ClInclude Include="..\include\basis_macro.h" />
+    <ClInclude Include="..\include\basis_md5.h" />
+    <ClInclude Include="..\include\basis_mutex.h" />
+    <ClInclude Include="..\include\basis_notification.h" />
+    <ClInclude Include="..\include\basis_observer.h" />
+    <ClInclude Include="..\include\basis_rw_lock.h" />
+    <ClInclude Include="..\include\basis_smart_ptr.h" />
+    <ClInclude Include="..\include\basis_subject.h" />
+    <ClInclude Include="..\include\basis_observer_ext.h" />
+    <ClInclude Include="..\include\basis_var.h" />
+    <ClInclude Include="..\include\basis_var_holder.h" />
   </ItemGroup>
 </Project>
