--- a/vs2012/basis.vcxproj
+++ b/vs2012/basis.vcxproj
@@ -74,7 +74,7 @@
     <ClInclude Include="..\include\basis_md5.h" />
     <ClInclude Include="..\include\basis_mutex.h" />
     <ClInclude Include="..\include\basis_notification.h" />
-    <ClInclude Include="..\include\basis_no_copy.h" />
+    <ClInclude Include="..\include\basis_nocopy.h" />
     <ClInclude Include="..\include\basis_observer.h" />
     <ClInclude Include="..\include\basis_rw_lock.h" />
     <ClInclude Include="..\include\basis_runnable.h" />
