--- a/vs2012/basis.vcxproj
+++ b/vs2012/basis.vcxproj
@@ -81,7 +81,9 @@
     <ClInclude Include="..\include\basis_subject.h" />
     <ClInclude Include="..\include\basis_observer_ext.h" />
     <ClInclude Include="..\include\basis_thread.h" />
-    <ClInclude Include="..\include\basis_time.h" />
+    <ClInclude Include="..\include\basis_timeformat.h" />
+    <ClInclude Include="..\include\basis_timespan.h" />
+    <ClInclude Include="..\include\basis_timestamp.h" />
     <ClInclude Include="..\include\basis_var.h" />
     <ClInclude Include="..\include\basis_var_holder.h" />
   </ItemGroup>
@@ -95,7 +97,9 @@
     <ClCompile Include="..\src\basis_rw_lock.cpp" />
     <ClCompile Include="..\src\basis_subject.cpp" />
     <ClCompile Include="..\src\basis_thread.cpp" />
-    <ClCompile Include="..\src\basis_time.cpp" />
+    <ClCompile Include="..\src\basis_timeformat.cpp" />
+    <ClCompile Include="..\src\basis_timespan.cpp" />
+    <ClCompile Include="..\src\basis_timestamp.cpp" />
     <ClCompile Include="..\src\basis_var.cpp" />
     <ClCompile Include="..\src\test.cpp" />
   </ItemGroup>
