--- a/vs2012/basis.vcxproj.filters
+++ b/vs2012/basis.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="..\include\basis_nocopy.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\basis_sync_queue.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\basis_subject.cpp">
