--- a/vs2012/basis.vcxproj
+++ b/vs2012/basis.vcxproj
@@ -79,6 +79,7 @@
     <ClInclude Include="..\include\basis_rw_lock.h" />
     <ClInclude Include="..\include\basis_runnable.h" />
     <ClInclude Include="..\include\basis_smart_ptr.h" />
+    <ClInclude Include="..\include\basis_str_tool.h" />
     <ClInclude Include="..\include\basis_subject.h" />
     <ClInclude Include="..\include\basis_observer_ext.h" />
     <ClInclude Include="..\include\basis_thread.h" />
@@ -95,6 +96,7 @@
     <ClCompile Include="..\src\basis_md5.cpp" />
     <ClCompile Include="..\src\basis_mutex.cpp" />
     <ClCompile Include="..\src\basis_rw_lock.cpp" />
+    <ClCompile Include="..\src\basis_str_tool.cpp" />
     <ClCompile Include="..\src\basis_subject.cpp" />
     <ClCompile Include="..\src\basis_thread.cpp" />
     <ClCompile Include="..\src\basis_time.cpp" />
