--- a/vs2012/basis.vcxproj.filters
+++ b/vs2012/basis.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="..\include\basis_nocopy.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\basis_str_tool.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\basis_subject.cpp">
@@ -111,6 +114,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\basis_rw_lock.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\basis_str_tool.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
