--- a/vs2012/basis.vcxproj
+++ b/vs2012/basis.vcxproj
@@ -65,6 +65,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\include\basis_atomic.h" />
+    <ClInclude Include="..\include\basis_buffer.h" />
     <ClInclude Include="..\include\basis_checked_delete.h" />
     <ClInclude Include="..\include\basis_critical.h" />
     <ClInclude Include="..\include\basis_define.h" />
@@ -91,6 +92,7 @@
     <ClInclude Include="..\include\basis_scope_locker.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\basis_buffer.cpp" />
     <ClCompile Include="..\src\basis_event.cpp" />
     <ClCompile Include="..\src\basis_json.cpp" />
     <ClCompile Include="..\src\basis_atomic.cpp" />
